@@ -46,6 +46,8 @@
     <!-- oVirt extensions versions -->
     <org.ovirt.engine.api.ovirt-engine-extensions-api.version>0.0.0-SNAPSHOT</org.ovirt.engine.api.ovirt-engine-extensions-api.version>
 
+    <!-- JDK9+ now separated modules from the jdk -->
+    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
     <!-- Dependencies Versions -->
     <junit.version>5.3.1</junit.version>
     <commons-lang.version>2.6</commons-lang.version>
@@ -71,13 +73,15 @@
     <slf4j.version>1.7.5</slf4j.version>
     <gwt.version>2.8.0</gwt.version>
     <mockito.version>2.18.3</mockito.version>
-    <javassist.version>3.20.0-GA</javassist.version>
+    <javassist.version>3.23.1-GA</javassist.version>
     <javax.mail.version>1.4.4</javax.mail.version>
     <hibernate-validator.version>4.2.0.Final</hibernate-validator.version>
     <jackson.version>1.9.13</jackson.version>
     <commons-configuration.version>1.6</commons-configuration.version>
     <commons-jxpath.version>1.3</commons-jxpath.version>
-    <jaxb-impl.version>2.2.11.jbossorg-1</jaxb-impl.version>
+    <jaxb-xjc.version>2.3</jaxb-xjc.version>
+    <jaxb-impl.version>2.3.1</jaxb-impl.version>
+    <jaxb-core.version>2.3.0</jaxb-core.version>
     <jbosssx-bare.version>2.0.4</jbosssx-bare.version>
     <infinispan.version>8.2.8.Final</infinispan.version>
     <snakeyaml.version>1.17</snakeyaml.version>
@@ -94,7 +98,7 @@
     <libsass-maven-plugin.version>0.2.8-libsass_3.4.4</libsass-maven-plugin.version>
 
     <!-- Plugins Versions -->
-    <maven-surefire-plugin.version>2.21.0</maven-surefire-plugin.version>
+    <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
     <maven-resources-plugin.version>2.4.3</maven-resources-plugin.version>
     <maven-ejb-plugin.version>2.3</maven-ejb-plugin.version>
     <cdi.api.version>1.2</cdi.api.version>
@@ -102,7 +106,7 @@
     <hamcrest.version>1.3</hamcrest.version>
     <reflections.version>0.9.9</reflections.version>
     <checkstyle.version>8.18</checkstyle.version>
-    <exec-maven-plugin.version>1.4.0</exec-maven-plugin.version>
+    <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
 
     <!-- Plugins configurations-->
     <ovirt.surefire.reportsDirectory>${project.build.directory}/surefire-reports</ovirt.surefire.reportsDirectory>
@@ -140,6 +144,26 @@
         <artifactId>activation</artifactId>
         <version>${javax.activation.version}</version>
         <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>${javax.annotation-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>${jaxb-impl.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>jaxb-core</artifactId>
+        <version>${jaxb-core.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>${jaxb-impl.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.xmlrpc</groupId>
@@ -278,6 +302,13 @@
         <version>${jackson.version}</version>
       </dependency>
       <!--GWT dependencies-->
+      <dependency>
+        <groupId>com.google.gwt</groupId>
+        <artifactId>gwt</artifactId>
+        <version>${gwt.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
       <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-user</artifactId>
@@ -486,10 +517,11 @@
       <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>3.8.0</version>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <source>11</source>
+            <target>11</target>
+            <release>11</release>
             <includes>
               <include>**/*.txt</include>
               <include>**/*.java</include>
@@ -568,6 +600,7 @@
           </dependencies>
           <configuration>
             <reportsDirectory>${ovirt.surefire.reportsDirectory}</reportsDirectory>
+            <argLine>--illegal-access=permit</argLine>
           </configuration>
         </plugin>
         <plugin>
